test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/incompatible_elem_type_compound_init.plx
pub fn main(none) i32 {
    #  invalid implicit conversion of double 1.0 to type int *
    arr: [3]*i32 = $(0, false, 1.0)
}
